--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,12 +7,14 @@
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
-    <string name="sync">Sync</string>
+    <string name="sync">Sync Now</string>
     <string name="title_activity_items">ItemsActivity</string>
     <string name="hello_world">Hello world!</string>
+
     <color name="white">#ffff</color>
     <color name="button">#1284ff</color>
+
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
