add table added

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,6 @@
     <color name="theme_background_light">#E8EAF6</color>
 
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="default_max_tables">10</string>
 
 </resources>
